# ImIDE

./: .gitignore  CMakeLists.txt  Examples.h  ImGuiPropertyExample.h  ImGuiPropertyInspector.cpp  ImGuiPropertyInspector.h  MainWindow.cpp  MainWindow.h  Properties.h  PropertyConfig.h  README.md  constants.h  events.cpp  events.h  main.cpp  main.h
FileBrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h
imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
imgui/examples/libs/glfw/include/GLFW/: glfw3.h
